--- a/src/main/resources/com/example/sudoku/Sudoku.fxml
+++ b/src/main/resources/com/example/sudoku/Sudoku.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="643.0" prefWidth="637.0" style="-fx-background-color: #e1a97d;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sudoku.SudokuController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="609.0" style="-fx-background-color: #55a8d7;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sudoku.SudokuController">
    <children>
-      <GridPane fx:id="board" alignment="CENTER" layoutX="84.0" layoutY="138.0" prefHeight="318.0" prefWidth="495.0" style="-fx-background-color: #fff; -fx-alignment: CENTER;">
+      <GridPane fx:id="board" alignment="CENTER" layoutX="57.0" layoutY="102.0" prefHeight="318.0" prefWidth="495.0" style="-fx-background-color: #fff; -fx-alignment: CENTER;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -34,58 +34,26 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="198.0" layoutY="25.0" prefHeight="43.0" prefWidth="198.0" text="Sudoku" textAlignment="CENTER">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="161.0" layoutY="26.0" prefHeight="43.0" prefWidth="198.0" text="Sudoku" textAlignment="CENTER">
          <font>
             <Font name="Comic Sans MS Bold" size="24.0" />
          </font>
       </Label>
-      <GridPane fx:id="row" alignment="CENTER" layoutX="84.0" layoutY="92.0" prefHeight="30.0" prefWidth="495.0" style="-fx-background-color: #fff;">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
-      <GridPane fx:id="column" alignment="CENTER" layoutX="28.0" layoutY="138.0" prefHeight="318.0" prefWidth="42.0" style="-fx-background-color: #fff;">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
-      <Button layoutX="280.0" layoutY="532.0" mnemonicParsing="false" onAction="#checkSolution" prefHeight="37.0" prefWidth="104.0" style="-fx-background-color: #ffefd5;" text="Check">
+      <Button layoutX="260.0" layoutY="480.0" mnemonicParsing="false" onAction="#checkSolution" prefHeight="37.0" prefWidth="104.0" style="-fx-background-color: #b2d7ec;" text="Check">
          <font>
             <Font name="Comic Sans MS Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="449.0" layoutY="532.0" mnemonicParsing="false" onAction="#solveGame" prefHeight="37.0" prefWidth="104.0" style="-fx-background-color: #ffefd5;" text="Solve">
+      <Button layoutX="422.0" layoutY="480.0" mnemonicParsing="false" onAction="#solveGame" prefHeight="37.0" prefWidth="104.0" style="-fx-background-color: #b2d7ec;" text="Solve">
          <font>
             <Font name="Comic Sans MS Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="96.0" layoutY="532.0" mnemonicParsing="false" onAction="#createGame" prefHeight="37.0" prefWidth="114.0" style="-fx-background-color: #ffefd5;" text="Create">
+      <Button layoutX="98.0" layoutY="480.0" mnemonicParsing="false" onAction="#createGame" prefHeight="37.0" prefWidth="114.0" style="-fx-background-color: #b2d7ec;" text="Create">
          <font>
             <Font name="Comic Sans MS Bold" size="18.0" />
          </font>
       </Button>
-      <Button fx:id="result" layoutX="390.0" layoutY="31.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="42.0" style="-fx-background-color: #fff;" />
+      <Button fx:id="result" layoutX="340.0" layoutY="32.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="42.0" style="-fx-background-color: #fff;" />
    </children>
 </Pane>
